33: Cleaned up some css, brute-force fixed sticky scroll to the right as position: sticky and absolute did not work.

--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
@@ -3,6 +3,7 @@
   class="node"
   [class.is-hoverable]="isHoverable"
   [class.is-selectable]="isSelectable"
+  [class.is-selected]="isSelected"
   style="margin-left: {{ marginLeft }}"
   (pointerenter)="setHoveredObject()"
   (pointerleave)="unsetHoveredObject()"
@@ -27,6 +28,7 @@
       <i *ngFor="let child of children" class="icon" [innerHTML]="child.icon"></i>
     </div>
   </div>
+  <div class="options-space"></div>
   <div class="options">
     <div
       class="visible icon"
