--- a/src/app/viewer-threejs/viewer-threejs.component.scss
+++ b/src/app/viewer-threejs/viewer-threejs.component.scss
@@ -1,4 +1,4 @@
-@use "../../styles/variables/zindex";
+@use "zindex";
 // The position relative & absolute is to make the element take 100% width & height.
 // The app-viewer-three component takes 17 height otherwise.
 :host {
