33: More review feedback and fixed bug with the caller check.

--- a/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.scss
+++ b/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.scss
@@ -1,5 +1,5 @@
 @use "./src/styles/vars";
-@use "../../../styles/mixins/mixins";
+@use "mixins";
 
 input[type="color"] {
   width: vars.$input-color-size;
