--- a/src/app/sidebar-items/material-editing/material-editing-specific-texture/material-editing-specific-texture.component.scss
+++ b/src/app/sidebar-items/material-editing/material-editing-specific-texture/material-editing-specific-texture.component.scss
@@ -1,5 +1,5 @@
-@use "./src/styles/vars";
-@use "../../../styles/mixins/mixins";
+@use "../../../../styles/vars";
+@use "mixins";
 
 .specific-color-values {
   padding: 0;
