Solved outline issue when shift left clicking a hierarchy node.

--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.scss
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.scss
@@ -28,6 +28,7 @@ $animation: 0.05s ease-in;
   gap: var(--spacer-50);
   position: relative;
   margin-top: var(--spacer-25);
+  outline: none;
 }
 
 .node-children {
